Fix collapse

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,9 +58,10 @@
     cursor: pointer;
 }
 
-.board-add:hover {
+.board-add:hover, .card-add:hover {
     cursor: pointer;
 }
+
 
 .board-delete {
     background-color: tomato;
